change composer json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "itpathsolutions/themecustomizer",
-    "description": "\"Set your theme configuration and customize your theme\"",
+    "name": "itpathsolutions/theme-customizer",
+    "description": "Set your theme configuration and customize your theme",
     "type": "library",
     "require": {
         "php": ">=5.8",
@@ -9,7 +9,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Itpathsolutions\\Themecustomizer\\": "src/"
+            "Itpathsolutions\\ThemeCustomizer\\": "src/"
         }
     },
     "authors": [
@@ -22,7 +22,7 @@
     "extra": {
         "laravel":{
             "providers":[
-                "\\Itpathsolutions\\Themecustomizer\\ThemeCustomizerServiceProvider"
+                "\\Itpathsolutions\\ThemeCustomizer\\ThemeCustomizerServiceProvider"
             ]
         }
     }
